@@ -55,7 +55,8 @@ else ()
     option(ENABLE_SIMPLE_MPD_SUPPORT "Enable support for simple (Cantata controlled) MPD" OFF)
     option(ENABLE_LIBVLC "Use libVLC for MPD HTTP stream playback (if ENABLE_HTTP_STREAM_PLAYBACK=ON)" ON)
 endif ()
-option(ENABLE_CDPARANOIA "Enable CDParanoia libraries (required for AudioCD support)" ON)
+option(ENABLE_CDPARANOIA "Enable CDParanoia libraries (this or libCDIO_paranoia required for AudioCD support)" ON)
+option(ENABLE_CDIOPARANOIA "Enable libCDIO_paranoia libraries (this or CDParanoia required for AudioCD support)" ON)
 option(ENABLE_CDDB "Enable CDDB libraries (either this or MusicBrianz required for AudioCD support)" ON)
 option(ENABLE_MUSICBRAINZ "Enable MusicBrianz libraries (either this or CDDB required for AudioCD support)" ON)
 option(ENABLE_UDISKS2 "Build UDisks2 backend, and NOT UDisks, for Qt builds" ON)
@@ -118,10 +119,17 @@ if (ENABLE_TAGLIB)
 endif ()
 
 if (TAGLIB_FOUND)
-    if (ENABLE_DEVICES_SUPPORT AND ENABLE_CDPARANOIA)
-        find_package(Cdparanoia)
-        macro_log_feature(CDPARANOIA_FOUND "libcdda_paranoia" "CD ripping." "http://www.xiph.org/paranoia")
-        if (CDPARANOIA_FOUND)
+    if (ENABLE_DEVICES_SUPPORT AND (ENABLE_CDIOPARANOIA OR ENABLE_CDPARANOIA))
+        # Issue 1021 - prefer libcdio_paranoia over plain cdparanoia
+        if (ENABLE_CDIOPARANOIA)
+            find_package(Cdioparanoia)
+            macro_log_feature(CDIOPARANOIA_FOUND "libcdio_paranoia" "CD ripping." "https://www.gnu.org/software/libcdio/")
+        endif()
+        if (NOT CDIOPARANOIA_FOUND)
+            find_package(Cdparanoia)
+            macro_log_feature(CDPARANOIA_FOUND "libcdda_paranoia" "CD ripping." "http://www.xiph.org/paranoia")
+        endif()
+        if (CDIOPARANOIA_FOUND OR CDPARANOIA_FOUND)
             if (ENABLE_CDDB)
                 find_package(CDDB)
                 macro_log_feature(CDDB_FOUND "libcddb" "CD info retrieval via CDDB." "http://libcddb.sourceforge.net")
@@ -471,8 +479,13 @@ if (TAGLIB_FOUND)
                  devices/albumdetailsdialog.h devices/cddbselectiondialog.h devices/audiocdsettings.h)
             set(CANTATA_UIS ${CANTATA_UIS} devices/albumdetails.ui devices/audiocdsettings.ui)
             # If CDDB/MusicBrainz5 found - then CDParanoia must have been!
-            set(CANTATA_LIBS ${CANTATA_LIBS} ${CDPARANOIA_LIBRARIES})
-            include_directories(${CDPARANOIA_INCLUDE_DIR})
+            if (CDIOPARANOIA_FOUND)
+                set(CANTATA_LIBS ${CANTATA_LIBS} ${CDIOPARANOIA_LIBRARIES})
+                include_directories(${CDIOPARANOIA_INCLUDE_DIRS})
+            else()
+                set(CANTATA_LIBS ${CANTATA_LIBS} ${CDPARANOIA_LIBRARIES})
+                include_directories(${CDPARANOIA_INCLUDE_DIR})
+            endif()
         endif ()
 
         set(CANTATA_SRCS ${CANTATA_SRCS} devices/devicespage.cpp devices/filejob.cpp
